@@ -12,4 +12,9 @@ ifndef ARM_GCC_PREFIX
     ifeq (/usr/local/bin/arm-none-eabi-gcc,$(wildcard /usr/local/bin/arm-none-eabi-gcc))
         ARM_GCC_PREFIX = /usr/local/bin/arm-none-eabi-
     endif
+# Generic ARM toolchain on Linux
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    ifeq (/usr/bin/arm-none-eabi-gcc,$(wildcard /usr/bin/arm-none-eabi-gcc))
+        ARM_GCC_PREFIX = /usr/bin/arm-none-eabi-
+    endif
 endif
