@@ -109,6 +109,13 @@ ifeq (/usr/local/bin/arm-none-eabi-gcc,$(wildcard /usr/local/bin/arm-none-eabi-g
     LDFLAGS     =
     INCLUDES    =
 endif
+# Generic ARM toolchain on Linux
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ifeq (/usr/bin/arm-none-eabi-gcc,$(wildcard /usr/bin/arm-none-eabi-gcc))
+    GCCPREFIX   = /usr/local/bin/arm-none-eabi-
+    LDFLAGS     =
+    INCLUDES    =
+endif
 endif
 
 endif # MACHINE_ARCH == arm
